--- a/src/css/burger.css
+++ b/src/css/burger.css
@@ -1,8 +1,18 @@
+/* BURGERBUTTON */
 .burger {
   height: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
+  -webkit-box-align: space-between;
+  -ms-flex-align: space-between;
   align-items: space-between;
   margin-right: 1rem;
 }
@@ -10,15 +20,19 @@
   width: 20px;
   height: 3px;
   background-color: var(--secondBgColor);
+  -webkit-transition: all cubic-bezier(0.26, 0.1, 0.27, 1.55) 0.35s;
   transition: all cubic-bezier(0.26, 0.1, 0.27, 1.55) 0.35s;
 }
 .burger.close .top {
+  -webkit-transform: rotate(-45deg) translate(-5px, 3px);
   transform: rotate(-45deg) translate(-5px, 3px);
 }
 .burger.close .middle {
   opacity: 0;
+  /*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; */
 }
 .burger.close .bottom {
+  -webkit-transform: rotate(45deg) translate(-6px, -5px);
   transform: rotate(45deg) translate(-6px, -5px);
 }
 @media only screen and (min-width: 992px) and (orientation: portrait) {
