--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,11 +1,16 @@
+/* NAVIGATION */
 #navigation_container {
   width: 100%;
   position: fixed;
   top: 0;
   z-index: 1200;
+  -webkit-transition: -webkit-transform 0.125s 0.1s ease-in-out;
+  transition: -webkit-transform 0.125s 0.1s ease-in-out;
   transition: transform 0.125s 0.1s ease-in-out;
+  transition: transform 0.125s 0.1s ease-in-out, -webkit-transform 0.125s 0.1s ease-in-out;
 }
 body.hide #navigation_container {
+  -webkit-transform: translate(0, -100px);
   transform: translate(0, -100px);
 }
 #navigation_content {
@@ -15,8 +20,14 @@ body.hide #navigation_container {
   width: 100%;
   height: var(--headerHeight_S);
   background-color: var(--headerNavColor);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -31,17 +42,29 @@ body.hide #navigation_container {
 #nav_links {
   width: 100vw;
   height: calc(100vh - var(--headerHeight_S));
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background-color: var(--headerNavColor);
   position: absolute;
   top: calc((100vh - var(--headerHeight_S)) * -1);
   z-index: -1;
+  -webkit-transition: -webkit-transform 0.5s 0.1s ease-in-out;
+  transition: -webkit-transform 0.5s 0.1s ease-in-out;
   transition: transform 0.5s 0.1s ease-in-out;
+  transition: transform 0.5s 0.1s ease-in-out, -webkit-transform 0.5s 0.1s ease-in-out;
 }
 #nav_links.show {
+  -webkit-transform: translate(0, 100vh);
   transform: translate(0, 100vh);
 }
 list-item {
@@ -55,8 +78,14 @@ list-item {
   width: 100%;
   color: var(--mainFontColor);
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-transform: capitalize;
 }
@@ -81,17 +110,26 @@ list-item {
 @media only screen and (min-width: 992px) {
   #navigation_content {
     height: var(--headerHeight_M);
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 
   #nav_links {
     width: 600px;
     height: var(--headerHeight_M);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     position: relative;
     top: 0;
+    -webkit-transition: none;
     transition: none;
     z-index: 1100;
     margin-right: 2rem;
