--- a/src/css/pagenotfound.css
+++ b/src/css/pagenotfound.css
@@ -1,9 +1,16 @@
+/* PAGENOTFOUND */
 .pagenotfound {
   height: 100vh;
   width: 100%;
   background-color: var(--secondBgColor);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
