--- a/src/css/personalities.css
+++ b/src/css/personalities.css
@@ -1,3 +1,4 @@
+/* PERSONALITIES */
 #personalities_banner_container {
   width: 100%;
   height: 456px;
@@ -10,8 +11,14 @@
   height: inherit;
   background-color: var(--mainBgColor);
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -25,9 +32,11 @@
   background-size: cover;
   background-position: center center;
   opacity: 0;
+  /*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; */
+  -webkit-animation: fadeIn 0.5s ease-in-out 0.5s 1 forwards;
   animation: fadeIn 0.5s ease-in-out 0.5s 1 forwards;
 }
-#personalities_banner_img::before {
+#personalities_banner_img:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -35,12 +44,24 @@
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
 }
-@keyframes fadeIn {
+@-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
+    /*   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; */
   }
   100% {
     opacity: 1;
+    /*   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; */
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    /*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; */
+  }
+  100% {
+    opacity: 1;
+    /*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; */
   }
 }
 #personalities_banner_desc {
@@ -94,9 +115,17 @@
   height: auto;
   list-style: none;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
 }
 personalitycard-component {
@@ -116,15 +145,16 @@ personalitycard-component {
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
-.personalities_card:hover .card_desc_slide::before {
+.personalities_card:hover .card_desc_slide:before {
   height: 100%;
 }
-.card_desc_slide::before {
+.card_desc_slide:before {
   content: " ";
   width: 100%;
   height: 5%;
   display: block;
   position: absolute;
+  -webkit-transition: height 0.2s ease-in-out;
   transition: height 0.2s ease-in-out;
   background-color: var(--slideColor);
   z-index: 20;
@@ -142,7 +172,7 @@ personalitycard-component {
   height: 160px;
   overflow: hidden;
 }
-.img_wrapper::before {
+.img_wrapper:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -152,13 +182,19 @@ personalitycard-component {
 }
 
 .img_wrapper img {
+  -webkit-transition: -webkit-transform 0.7s ease-in-out;
+  transition: -webkit-transform 0.7s ease-in-out;
   transition: transform 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out;
   height: 160px;
   width: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: top;
   object-position: top;
 }
 .personalities_card:hover img {
+  -webkit-transform: scale(1.2);
   transform: scale(1.2);
 }
 .card_text {
@@ -305,6 +341,8 @@ personalitycard-component {
   }
   #gallery_list {
     width: 1120px;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
   }
 
@@ -318,6 +356,8 @@ personalitycard-component {
   }
   #gallery_list {
     width: 1204px;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
   }
 
