--- a/src/css/resultproperties.css
+++ b/src/css/resultproperties.css
@@ -1,3 +1,4 @@
+/* RESULTPROPERTIES */
 #result_container {
   width: 100%;
   height: auto;
@@ -16,9 +17,18 @@ resultproperties-component {
   width: 100%;
 }
 .result_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   border: 2px solid var(--testResultColor);
   border-radius: 15px;
@@ -48,13 +58,24 @@ resultproperties-component {
   color: var(--fourthFontColor);
   margin-bottom: 10px;
   padding: 0 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .percentage_text_left,
 .percentage_text_right {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   text-align: center;
   font-weight: bold;
@@ -72,13 +93,24 @@ resultproperties-component {
   line-height: 0.8rem;
 }
 .percantage_container {
+  -webkit-box-flex: 3;
+  -ms-flex: 3;
   flex: 3;
   height: 10px;
   border-radius: 5px;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 0 0.5rem;
 }
@@ -104,6 +136,7 @@ resultproperties-component {
   overflow: hidden;
   height: 0;
   width: 100%;
+  -webkit-transition: height 0.5s ease-in-out;
   transition: height 0.5s ease-in-out;
 }
 .desc.show {
